# 8086-Decoder

./: CMakeLists.txt  README.md  run.sh
8086/: 8086.cpp  8086.hpp  8086_decode.cpp  8086_decode.h  8086_instruction_table.inl  8086_text.cpp  8086_text.h  defs.h  file.cpp  file.hpp  main.cpp
